@startuml

interface RotationState {
+ getRotationOffset(Piece, MoveType, Model): Point
}

enum SuperRotationState {
- Model model
+ getRotationOffset(Piece, MoveType, Model): Point
- getNextState()
}

note left of SuperRotationState::getRotationOffset
super rotation logic ...
Call model.setRotationState(this.getNextState)
end note

class BasicRotationState {
+ getRotationOffset(Piece, MoveType, Model): Point
}

class Model {
+ currentState: RotationState
+ modelTick(MoveType)
+ setRotationState(Rotation State)
}

note left of Model::modelTick
if MoveType == Rotate:
    Calls RotationState.getRotationOffset(...)
end note

RotationState <--o Model
SuperRotationState ..|> RotationState
BasicRotationState ..|> RotationState

@enduml